--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,7 +1,2 @@
-/module-info.class
-/teste/
-/Aula1/
-/Carro/
-/ListaExtraExe/
-/TestesFaculdade.class
-/TestesFaculdade/
+/snippet/
+/construtores/
