Tratamento de exeção

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -3,3 +3,9 @@
 /Encapsulamento/
 /Carro/
 /Array/
+/TestesFaculdade/
+/meuProjetoJava/
+/Prova.class
+/Exemplo.class
+/teste/
+/tratamento_e_execao/
